--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,7 @@
 #nav-bar {
-  margin-top: 25px;
+  /* padding-top: 60px; */
+  background-color: #F2F2F2;
+}
+.navbar{
+  background-color: #F2F2F2
 }
