--- a/src/components/Career/Hero.css
+++ b/src/components/Career/Hero.css
@@ -1,32 +1,35 @@
-#the-hero{
-  color:grey;
+#the-hero {
+  color: grey;
 }
 #hero-welcome {
-  color: #363636;
+  color: #A44A3F;
   font-size: 24px;
-  line-height: 1.125;
+  margin-bottom: 0;
+  line-height:100px;
 }
 
 #hero-title {
-  color: #363636;
-  font-size: 48px;
-  font-weight: 400;
-  line-height: 1.125;
+  margin-left: -10%;
+  font-size: 36px;
+  color: #fff;
+  background-color: #24232c !important;
+  box-shadow: -10px -12px 0px #24232c, 10px -12px 0px #24232c,
+    -10px 0px 0px #24232c, 10px 0px 0px #24232c;
+  font-weight: normal;
+  display: inline;
+  line-height: 0;
 }
-
-#hero-name {
-  color: #C9C0A5;
-  font-size: 48px;
-  font-style: bold;
-  font-weight: 500;
-  line-height: 1.125;
-}
-
 
 #hero-description {
-  color: #4a4a4a;
-  font-size: 24px;
+  color: #24232c;
+  font-size: 16px;
+  font-weight: 400;
   margin: 25px;
+}
+
+#instagram-icon {
+  margin: 25px;
+
 }
 
 .blinking-cursor {
