Major improvements to the UX/UI design of the coaching website (#56)

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css?family=DM+Sans&display=swap");
 
 h1,
@@ -7,7 +7,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -41,4 +41,8 @@ li {
 .fade-enter,
 .fade-leave-active {
   opacity: 0;
+}
+
+.App{
+  background-color: #F2F3F4
 }
