--- a/src/components/Career/Hero.css
+++ b/src/components/Career/Hero.css
@@ -1,17 +1,3 @@
-#hero-quote {
-  font-size: 36px;
-  color: #fff;
-  background-color: #24232c !important;
-  box-shadow:
-    -10px -12px 0px #24232c,
-    10px -12px 0px #24232c,
-    -10px 0px 0px #24232c,
-    10px 0px 0px #24232c;
-  font-weight: normal;
-  display: inline;
-  line-height: 0;
-}
-
 #hero-welcome {
   color: #a44a3f;
   font-size: 24px;
@@ -33,6 +19,18 @@
   font-weight: normal;
   display: inline;
   line-height: 0;
+}
+
+#banner {
+  font-size: 32px;
+  color: #fff;
+  background-color: #24232c !important;
+  box-shadow:
+    -10px -12px 0px #24232c,
+    10px -12px 0px #24232c,
+    -10px 0px 0px #24232c,
+    10px 0px 0px #24232c;
+  font-weight: normal;
 }
 
 #hero-description {
