Enhancements to the coaching website UX (#70)

--- a/src/components/Career/Hero.css
+++ b/src/components/Career/Hero.css
@@ -11,11 +11,26 @@
   font-size: 36px;
   color: #fff;
   background-color: #24232c !important;
-  box-shadow: -10px -12px 0px #24232c, 10px -12px 0px #24232c,
-    -10px 0px 0px #24232c, 10px 0px 0px #24232c;
+  box-shadow:
+    -10px -12px 0px #24232c,
+    10px -12px 0px #24232c,
+    -10px 0px 0px #24232c,
+    10px 0px 0px #24232c;
   font-weight: normal;
   display: inline;
   line-height: 0;
+}
+
+#banner {
+  font-size: 32px;
+  color: #fff;
+  background-color: #24232c !important;
+  box-shadow:
+    -10px -12px 0px #24232c,
+    10px -12px 0px #24232c,
+    -10px 0px 0px #24232c,
+    10px 0px 0px #24232c;
+  font-weight: normal;
 }
 
 #hero-description {
